--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/VladimirRM/backend-cource-ut/issues"
   },
-  "homepage": "https://github.com/VladimirRM/backend-cource-ut#readme"
+  "homepage": "https://github.com/VladimirRM/backend-cource-ut#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
